--- a/README.Rmd
+++ b/README.Rmd
@@ -1,11 +1,10 @@
 ---
 title: "Lab 2: Introduction to RStudio"
-author: "___"
+author: "Rose Lakeman"
 date: "`r format(Sys.Date())`"
 output: github_document
 ---
 
-> INSTRUCTIONS: REMOVE THIS LINE AND REPLACE ____ WITH YOUR OWN TEXT
 
 Welcome to my Lab 2 repository for Quantitative Biology BIOL 275 at MSUM.
 
@@ -13,15 +12,15 @@ Welcome to my Lab 2 repository for Quantitative Biology BIOL 275 at MSUM.
 
 The objectives of this lab are:
 
-- ___
-- ___
+- Use the console and source windows in RStudio
+- Write and run code in an R script
 
 ## Repository contents
 
 The repository contains the following scripts:
 
 - [calculator.R](calculator.R)
-- [calculator.Rmd](calculator.Rmd)
+- [Lab 2 Report](assignment.md)
 
 ## Instructions for knitting
 
@@ -43,5 +42,5 @@ Here is a list of resources for helping you write R Markdown documents:
 Here is my session information:
 
 ```{r}
-sessioninfo::session_info(c("tidyverse"))
+sessioninfo::session_info()
 ```
